--- a/Travel-Journal/src/App.css
+++ b/Travel-Journal/src/App.css
@@ -1,7 +1,8 @@
 #root {
   max-width: 550px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  border: 1px solid black;
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
